Updated BrobInt as of 4/18